# VoxID

./: Dockerfile  README.md  pyproject.toml
assets/: explainer_scene.py  generate_banner.py  generate_fingerprint.py
benchmarks/: bench_enrollment.py  conftest.py
benchmarks/results/: baseline.json  comparison.json  optimized.json
docs/: development.md  overview.md  system-design.md  usage.md
src/voxid/: __init__.py  archive.py  audio_utils.py  cli.py  config.py  core.py  models.py  schemas.py  serialization.py  store.py  versioning.py
src/voxid/adapters/: __init__.py  chatterbox.py  cosyvoice2.py  fish_speech.py  indextts2.py  protocol.py  qwen3_tts.py  stub.py
src/voxid/api/: app.py  auth.py  deps.py  models.py  rate_limit.py
src/voxid/api/routes/: __init__.py  enroll.py  generate.py  health.py  identities.py  route.py  serving.py
src/voxid/api/static/enrollment/: index.html
src/voxid/api/static/enrollment/css/: annotations.css  enrollment.css
src/voxid/api/static/enrollment/js/: annotation-renderer.js  app.js  audio-capture.js  enrollment-controller.js  meters.js  playback.js  waveform.js
src/voxid/api/static/enrollment/worklets/: recorder-worklet.js
src/voxid/context/: __init__.py  conditioning.py  manager.py  types.py
src/voxid/enrollment/: __init__.py  cli_ui.py  consent.py  health.py  phoneme_tracker.py  preprocessor.py  quality_gate.py  recorder.py  script_generator.py  session.py  vad.py
src/voxid/enrollment/multilingual/: __init__.py  language_config.py  phoneme_universal.py  script_generator.py
src/voxid/enrollment/multilingual/corpora/: ar.json  de.json  en.json  es.json  fr.json  hi.json  ja.json  ko.json  pt.json  zh.json
src/voxid/enrollment/prompts/: en_conversational.json  en_emphatic.json  en_narration.json  en_phonetic.json  en_technical.json
src/voxid/plugins/voicebox/: __init__.py  backend.py  models.py  sync.py
src/voxid/router/: __init__.py  cache.py  classifiers.py  semantic_classifier.py  training.py
src/voxid/security/: __init__.py  audit.py  consent.py  drift.py  watermark.py
src/voxid/security/spoofing/: __init__.py  config.py  detector.py  diffusion.py  features.py  models.py  types.py
src/voxid/segments/: __init__.py  segmenter.py  smoother.py  stitcher.py
src/voxid/serving/: __init__.py  config.py  dispatcher.py  plugin.py  worker.py
src/voxid/tokenizer/: __init__.py  acoustic.py  config.py  projection.py  semantic.py  types.py  unified.py
src/voxid/video/: __init__.py  ffmpeg.py  manim.py  remotion.py  timing.py
tests/: conftest.py  test_adapter_capabilities.py  test_adapters.py  test_api.py  test_api_auth.py  test_api_enroll.py  test_api_rate_limit.py  test_archive.py  test_cli.py  test_cli_enroll.py  test_cli_segments.py  test_config.py  test_core.py  test_dispatcher.py  test_engines.py  test_enrollment_consent.py  test_enrollment_integration.py  test_enrollment_session.py  test_manifest.py  test_models.py  test_multilingual_script_generator.py  test_phoneme_tracker.py  test_phoneme_universal.py  test_preprocessor.py  test_quality_gate.py  test_qwen3_integration.py  test_recorder.py  test_router.py  test_router_benchmarks.py  test_router_cache.py  test_router_classifiers.py  test_router_edge_cases.py  test_router_evaluation.py  test_schemas.py  test_script_generator.py  test_security_audit.py  test_security_consent.py  test_security_drift.py  test_security_watermark.py  test_segmenter.py  (+17 more)
tests/integration/security/: test_spoofing_gate.py
tests/integration/serving/: test_multi_gpu.py
tests/unit/context/: test_conditioning.py  test_manager.py
tests/unit/security/spoofing/: test_detector.py  test_features.py
tests/unit/serving/: test_dispatcher.py  test_worker.py
tests/unit/tokenizer/: test_acoustic.py  test_projection.py  test_semantic.py  test_types.py  test_unified.py
