[project]
name = "voxid"
version = "0.1.0"
description = "Voice Identity Management Platform"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "pydantic>=2.0",
    "safetensors>=0.4",
    "soundfile>=0.12",
    "pydub>=0.25",
    "click>=8.0",
    "tomli>=2.0",
    "tomli-w>=1.0",
    "numpy>=1.26",
]

[project.optional-dependencies]
qwen3-tts = ["qwen-tts>=0.1"]
qwen3-tts-mlx = [
    "mlx-audio>=0.4",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.4",
]

[project.scripts]
voxid = "voxid.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/voxid"]

[tool.mypy]
strict = true
python_version = "3.12"

[[tool.mypy.overrides]]
module = "tomli_w"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "qwen_tts"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "qwen_tts.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "mlx_audio.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "torch"
ignore_missing_imports = true

[tool.ruff]
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers -v"

[tool.uv]
conflicts = [
    [
        { extra = "qwen3-tts" },
        { extra = "qwen3-tts-mlx" },
    ],
]

[dependency-groups]
dev = [
    "soundfile>=0.13.1",
]
